# api-docs/api-docs.yaml
@@ -73,6 +73,38 @@ paths:
             '*/*':
               schema:
                 type: object
+  /api/v1/users/{id}/profile-photo:
+    put:
+      tags:
+      - user-rest-controller
+      operationId: uploadProfilePhoto
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                imageFile:
+                  type: string
+                  format: binary
+              required:
+              - imageFile
+      responses:
+        "404":
+          description: Not Found
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: object
   /api/v1/reviews/{id}:
     get:
       tags:
@@ -425,11 +457,11 @@ paths:
             schema:
               type: object
               properties:
-                file:
+                imageFile:
                   type: string
                   format: binary
               required:
-              - file
+              - imageFile
       responses:
         "404":
           description: Not Found
@@ -744,6 +776,20 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/AuthResponse"
+  /api/v1/users/me:
+    get:
+      tags:
+      - user-rest-controller
+      operationId: getMe
+      responses:
+        "404":
+          description: Not Found
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/UserBasicDTO"
   /api/v1/reviews:
     get:
       tags:
@@ -1093,6 +1139,20 @@ components:
           type: string
         password:
           type: string
+    UserBasicDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        username:
+          type: string
+        description:
+          type: string
+        email:
+          type: string
+        profilePhoto:
+          $ref: "#/components/schemas/ImageDTO"
     Pageable:
       type: object
       properties:
